# Numerical-methods

./: CMakeLists.txt
lab1/: lab1.cpp
lab2/: lab2.cpp
lab3/: main.cpp
lab4/: main.cpp
lab6/: main.cpp
lab7/: main.cpp
sr2/: input.txt  main.cpp  output.txt
