cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)

project(lab2 VERSION 1.0)
add_executable(lab2 lab2/lab2.cpp)

project(lab3 VERSION 1.0)
add_executable(lab3 lab3/main.cpp)

project(lab4 VERSION 1.0)
add_executable(lab4 lab4/main.cpp)

project(sr2 VERSION 1.0)
add_executable(sr2 sr2/main.cpp)